--- a/HangoverCSS.css
+++ b/HangoverCSS.css
@@ -2,24 +2,49 @@ body {
     margin: 0;
     box-sizing: border-box;
     font-family: 'Muli', sans-serif;
-    background: #EDE2DC;
+    /* background: #F13C1E; */
+    /* background: #FF7A66; */
+    background: #FFABA0;
 }
 
 .title {
     margin-top: 4rem;
     text-align: center;
-    color: #3F56A1;
+    color: #034585;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-style: italic;
+    font-weight: bold;
+    font-size: 4rem;
+    text-shadow: 2px 2px black;
 }
 
-h2, span {
+h2 {
     font-style: italic;
     letter-spacing: .2rem;
-    color: #F13C1E;  
+    color: #034585;  
+}
+
+span {
+    font-size: 1rem;
+}
+
+.form-wrapper {
+    border: groove #034585;
+    width: 75%;
+    display: block;
+    margin: auto;
+    background: #FFF;
+    padding: 3rem;
+    margin-top: 3rem;
 }
 
 .form-content {
     margin: auto;
     text-align: center;
+}
+
+.sel-opt {
+    font-size: .8rem;   
 }
 
 .drink-label {
@@ -55,15 +80,19 @@ h2, span {
 
 .submit-btn {
     color: black;
-    font-size: 2rem;
+    font-size: 1.8rem;
     border-radius: 4px;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
     background: #C4CBE3;
-    width: 200px;
+    width: 220px;
     margin-top: 1rem;
     border-radius: 8px;
     padding: 12px;
     cursor: pointer;
+}
+
+.submit-btn:hover {
+    border: inset 1px;
 }
 
 .result-paragraph {
